# ai-passage-creator

./: .gitignore  README.md  pom.xml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: articleController.ts  typings.d.ts
go-backend/: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  config.yaml.example  docker-compose.yml  go.mod  go.sum  start.bat  start.sh
go-backend/docs/: docs.go
python-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  docker-compose.yml  pyproject.toml
python-backend/app/: __init__.py  config.py  database.py  deps.py  exceptions.py  main.py
python-backend/app/constants/: __init__.py  article.py  prompt.py
python-backend/app/managers/: __init__.py  sse_manager.py
python-backend/app/models/: __init__.py  agent_log.py  article.py  enums.py  user.py
python-backend/app/routers/: __init__.py  article.py  health.py  statistics.py  user.py
python-backend/app/schemas/: __init__.py  article.py  common.py  image.py  statistics.py  user.py
python-backend/app/services/: __init__.py  agent_log_service.py  article_agent_service.py  article_async_service.py  article_service.py  cos_service.py  emoji_pack_service.py  iconify_service.py  image_search_service.py  image_service_strategy.py  mermaid_service.py  nano_banana_service.py  pexels_service.py  statistics_service.py  svg_diagram_service.py  user_service.py
python-backend/app/utils/: __init__.py  password.py  session.py
sql/: add_phase_fields.sql  create_table.sql
(+96 files in other folders)
